--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,8 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+Work experience
+======
+* September 2018 - Current: Student Demonstrator
+  * Queen Mary Univerity of London
+  * Duties included: Marking, Lecture Preparation and Teaching
