--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,16 +4,9 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
-<ul>
-  <li>Computer Programming (Postgraduate)</li>
-  <li>Electronic Sensing (Postgraduate)</li>
-  <li>Software Engineering (Undergraduate)</li>
-</ul>
-
 <ul>
 	<li>
-		<p>Tutor of <b>Computer Programming (Postgraduate)</b><br/>
+		<h2><p>Tutor of <b>Computer Programming (Postgraduate)</b></h2><br/>
 		This module provides an introduction to the principles of programming in the context of designing and constructing complete programs. Programming techniques will be introduced and practical work will form an integral part of the course and of the assessment of students. The first half of the course will concentrate on program structures. The second half will cover representation of abstract types such as lists and trees using the types such as records and arrays provided in imperative programming languages.
 		</li>
 	<li>
