--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,21 +4,20 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+<h2><p>Computer Programming (Postgraduate)</h2><br/>
+		This module provides an introduction to the principles of programming in the context of designing and constructing complete programs. Programming techniques will be introduced and practical work will form an integral part of the course and of the assessment of students. The first half of the course will concentrate on program structures. The second half will cover representation of abstract types such as lists and trees using the types such as records and arrays provided in imperative programming languages.
+
 <ul>
 	<li>
-		<h3><p>Computer Programming (Postgraduate)</h3><br/>
-		This module provides an introduction to the principles of programming in the context of designing and constructing complete programs. Programming techniques will be introduced and practical work will form an integral part of the course and of the assessment of students. The first half of the course will concentrate on program structures. The second half will cover representation of abstract types such as lists and trees using the types such as records and arrays provided in imperative programming languages.
-		</li>
-	<li>
-		<h3><p>Tutor of Electronic Sensing (Postgraduate)</h3><br/>
+		<h3><p>Electronic Sensing (Postgraduate)</h3><br/>
 		The new module focuses on electronic engineering aspects of sensing and instrumentation systems. It integrates the themes of signal theory, metrology, sensing & transduction, signal acquisition and conditioning for further processing, analysis, characterisation and design of sensing electronic systems, system-level considerations and sensor data analysis techniques. The knowledge and skills developed through this module are essential for any student engaging in the design of systems which extract signals from, or interact with the real world, and are highly relevant to electronic engineers designing, testing and using sensing systems and applications.
 	</li>
 	<li>
-		<h3><p>Tutor of Software Engineering (Undergraduate)</h3><br/>
+		<h3><p>Software Engineering (Undergraduate)</h3><br/>
 		Software Engineering is concerned with applying engineering principles to the production of software. This module provides the management principles, theoretical foundations, tools, notation and background necessary to develop and test large-scale software systems. The practical part of the module consists of lab assignments in which students use a range of relevant tools (a Java programming IDE, unit testing tool, configuration management tool, UML design tool, and project planning tool). Aims To ensure students have the necessary understanding of the principles and tools needed to build and test large-scale software systems. In particular, it provides the necessary background for students to undertake a significant group project assignment in subsequent modules or employment.
 	</li>
 	<li>
-		<h3><p>Tutor of Coding for Scientists (Undergraduate)</h3><br/>
+		<h3><p>Coding for Scientists (Undergraduate)</h3><br/>
 		This module provides a hands-on introduction to computer programming (popularly known as "coding"), primarily using the popular Python scripting language. The focus is on producing robust software for repeatable data-centric scientific work. Key programming concepts are introduced, and these concepts are then brought together in scientifically relevant applications to analyse data, interact with a database and create dynamic web content. Good coding practice, such as the importance of documentation and version control, is emphasised throughout.
 	</li>
 </ul>
