--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,12 +5,12 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<h2><p>Machine Learning (Postgraduate)</h2><br/>
-		The aim of the module is to give students an understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
-		and to allow them to apply such methods in a range of areas.
+<h2>Machine Learning (Postgraduate)</h2>
+	The aim of the module is to give students an understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
+	and to allow them to apply such methods in a range of areas.
 
 
-<h2><p>Data Mining (Postgraduate)</h2><br/>
+<h2><p>Data Mining (Postgraduate)</h2>
 		Data that has relevance for decision-making is accumulating at an incredible rate due to a host of technological advances. 
 		Electronic data capture has become inexpensive and ubiquitous as a by-product of innovations such as the Internet, e-commerce, electronic banking, point-of-sale devices, 
 		bar-code readers, and electronic patient records. Data mining is a rapidly growing field that is concerned with developing techniques to assist decision-makers 
@@ -19,25 +19,25 @@ author_profile: true
 		Students taking this module should have an elementary understanding of probability concepts and some experience of programming.
 		
 
-<h2><p>Computer Programming (Postgraduate)</h2><br/>
+<h2>Computer Programming (Postgraduate)</h2>
 		This module provides an introduction to the principles of programming in the context of designing and constructing complete programs. Programming techniques will be introduced and practical work will form an integral part of the course and of the assessment of students. The first half of the course will concentrate on program structures. The second half will cover representation of abstract types such as lists and trees using the types such as records and arrays provided in imperative programming languages.
 
 
-<h2><p>Electronic Sensing (Postgraduate)</h2><br/>
+<h2>Electronic Sensing (Postgraduate)</h2>
 		The new module focuses on electronic engineering aspects of sensing and instrumentation systems. It integrates the themes of signal theory, metrology, sensing & transduction, signal acquisition and conditioning for further processing, analysis, characterisation and design of sensing electronic systems, system-level considerations and sensor data analysis techniques. The knowledge and skills developed through this module are essential for any student engaging in the design of systems which extract signals from, or interact with the real world, and are highly relevant to electronic engineers designing, testing and using sensing systems and applications.
 
 
-<h2><p>Object-Oriented Programming (Undergraduate)</h2><br/>
+<h2>Object-Oriented Programming (Undergraduate)</h2>
 		Major topics include the concepts of class, object, method, subclass, inheritance and their use in programming. 
 		The relevance of the object oriented style with respect to concrete software problems will be stressed both in lectures and labs. 
 		There will be two hours of lectures per week, and each student will have a weekly timetabled lab session. 
 		In addition, you will be expected to spend further time outside scheduled lab periods in the lab (or at home machines if they are available), and to read textbooks and review notes.
 
 
-<h2><p>Software Engineering (Undergraduate)</h2><br/>
+<h2>Software Engineering (Undergraduate)</h2>
 		Software Engineering is concerned with applying engineering principles to the production of software. This module provides the management principles, theoretical foundations, tools, notation and background necessary to develop and test large-scale software systems. The practical part of the module consists of lab assignments in which students use a range of relevant tools (a Java programming IDE, unit testing tool, configuration management tool, UML design tool, and project planning tool). Aims To ensure students have the necessary understanding of the principles and tools needed to build and test large-scale software systems. In particular, it provides the necessary background for students to undertake a significant group project assignment in subsequent modules or employment.
 
 
-<h2><p>Coding for Scientists (Undergraduate)</h2><br/>
+<h2>Coding for Scientists (Undergraduate)</h2>
 		This module provides a hands-on introduction to computer programming (popularly known as "coding"), primarily using the popular Python scripting language. The focus is on producing robust software for repeatable data-centric scientific work. Key programming concepts are introduced, and these concepts are then brought together in scientifically relevant applications to analyse data, interact with a database and create dynamic web content. Good coding practice, such as the importance of documentation and version control, is emphasised throughout.
 
