--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
+During my PhD studies, I have participated as Student Demonstrator for multiple modules. 
+Main responsibilities consisted of supervising students during laboratories, helping them with exercises and explaining the theory of the corresponding module.
+In addition, I have prepared the material and taught lessons on frequency and circuit analysis for the Electronic Sensing module.
+
+
 <h2>Machine Learning (Postgraduate)</h2>
 	The aim of the module is to give students an understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
 	and to allow them to apply such methods in a range of areas.
