--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,9 @@ permalink: /teaching/
 author_profile: true
 ---
 
-During my PhD studies, I have participated as Student Demonstrator for multiple modules. 
+During my PhD studies, I have worked as Student Demonstrator for multiple modules. 
 Main responsibilities consisted of supervising students during laboratories, helping them with exercises and explaining the theory of the corresponding module.
-In addition, I have prepared the material and taught lessons on frequency and circuit analysis for the Electronic Sensing module.
+In addition, I have prepared the material and lectured lessons on frequency and circuit analysis for the Electronic Sensing module.
 Below a list and a short description of the modules for which I have demonstrated for.
 
 
