--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,45 +5,44 @@ permalink: /teaching/
 author_profile: true
 ---
 
-During my PhD studies, I have worked as Student Demonstrator for multiple modules. 
-Main responsibilities consisted of supervising students during laboratories, helping them with exercises and explaining the theory of the corresponding module.
-In addition, I have prepared the material and lectured lessons on frequency and circuit analysis for the Electronic Sensing module.
-Below a list and a short description of the modules for which I have demonstrated for.
+I have worked as Teaching Assistant for various modules with a focus on Machine Learning and Data Mining both for Queen Mary University of London and Imperial College London. 
+Main responsibilities consisted of preparing materials for the module,supervising students during laboratories, helping them with exercises and explaining the theory of the corresponding module.
+Below a list and a short description of the modules that I have assisted with.
+
+<h2><a href="https://www.imperial.ac.uk/study/courses/postgraduate-taught/translational-neuroscience/">Machine Learning For Neuroscience (Postgraduate) - Imperial</a></h2>
+Machine learning module applied to neuroscience-inspired machine learning, main focus on Machine Learning and Deep Learning models.
+<a href="https://github.com/PBarnaghi/ML4NS">Material distributed on Github</a>
 
 
-<h2>Machine Learning (Postgraduate)</h2>
-	The aim of the module is to give students an understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
-	and to allow them to apply such methods in a range of areas.
+<h2><a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs708pecs708u-machine-learning.html">Machine Learning (Postgraduate) - QMUL</a></h2>
+This module consisted on providing a understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
+and to allow them to apply such methods in a range of areas.
 
 
-<h2><p>Data Mining (Postgraduate)</h2>
-		Data that has relevance for decision-making is accumulating at an incredible rate due to a host of technological advances. 
-		Electronic data capture has become inexpensive and ubiquitous as a by-product of innovations such as the Internet, e-commerce, electronic banking, point-of-sale devices, 
-		bar-code readers, and electronic patient records. Data mining is a rapidly growing field that is concerned with developing techniques to assist decision-makers 
-		to make intelligent use of these repositories. The field of data mining has evolved from the disciplines of statistics and artificial intelligence. 
-		This module will combine practical exploration of data mining techniques with a exploration of algorithms, including their limitations. 
-		Students taking this module should have an elementary understanding of probability concepts and some experience of programming.
+<h2><a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs607u-data-mining.html">Data Mining (Postgraduate) - QMUL</a></h2>
+This module combined practical exploration of data mining techniques with a exploration of algorithms, including their limitations. 
 		
 
-<h2>Computer Programming (Postgraduate)</h2>
-		This module provides an introduction to the principles of programming in the context of designing and constructing complete programs. Programming techniques will be introduced and practical work will form an integral part of the course and of the assessment of students. The first half of the course will concentrate on program structures. The second half will cover representation of abstract types such as lists and trees using the types such as records and arrays provided in imperative programming languages.
+<h2><a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs717pecs717u-it-programming.html">Computer Programming (Postgraduate) - QMUL</a></h2>
+This module provided an introduction to the principles of programming in the context of designing and constructing complete programs. 
 
 
-<h2>Electronic Sensing (Postgraduate)</h2>
-		The new module focuses on electronic engineering aspects of sensing and instrumentation systems. It integrates the themes of signal theory, metrology, sensing & transduction, signal acquisition and conditioning for further processing, analysis, characterisation and design of sensing electronic systems, system-level considerations and sensor data analysis techniques. The knowledge and skills developed through this module are essential for any student engaging in the design of systems which extract signals from, or interact with the real world, and are highly relevant to electronic engineers designing, testing and using sensing systems and applications.
+<h2><a href="https://www.sems.qmul.ac.uk/staff/i.farkhatdinov/teaching/">Electronic Sensing (Postgraduate) - QMUL</a></h2>
+This module focused on electronic engineering aspects of sensing and instrumentation system: signal theory, metrology, sensing & transduction, signal acquisition and conditioning 
+for further processing, analysis, characterisation and design of sensing electronic systems, system-level considerations and sensor data analysis techniques. 
 
 
-<h2>Object-Oriented Programming (Undergraduate)</h2>
+<!-- <h2>Object-Oriented Programming (Undergraduate)</h2>
 		Major topics include the concepts of class, object, method, subclass, inheritance and their use in programming. 
 		The relevance of the object oriented style with respect to concrete software problems will be stressed both in lectures and labs. 
 		There will be two hours of lectures per week, and each student will have a weekly timetabled lab session. 
-		In addition, you will be expected to spend further time outside scheduled lab periods in the lab (or at home machines if they are available), and to read textbooks and review notes.
+		In addition, you will be expected to spend further time outside scheduled lab periods in the lab (or at home machines if they are available), and to read textbooks and review notes. -->
 
 
-<h2>Software Engineering (Undergraduate)</h2>
-		Software Engineering is concerned with applying engineering principles to the production of software. This module provides the management principles, theoretical foundations, tools, notation and background necessary to develop and test large-scale software systems. The practical part of the module consists of lab assignments in which students use a range of relevant tools (a Java programming IDE, unit testing tool, configuration management tool, UML design tool, and project planning tool). Aims To ensure students have the necessary understanding of the principles and tools needed to build and test large-scale software systems. In particular, it provides the necessary background for students to undertake a significant group project assignment in subsequent modules or employment.
+<h2><a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs505u-software-engineering.html">Software Engineering (Undergraduate) - QMUL</a></h2>
+This module provided the management principles, theoretical foundations, tools, notation and background necessary to develop and test large-scale software systems. 
 
+<h2><a href="https://github.com/fsmeraldi/c4s-introduction">Coding for Scientists (Undergraduate) -  QMUL</a></h2>
+This module provided a hands-on introduction to computer programming, primarily using the popular Python scripting language. 
 
-<h2>Coding for Scientists (Undergraduate)</h2>
-		This module provides a hands-on introduction to computer programming (popularly known as "coding"), primarily using the popular Python scripting language. The focus is on producing robust software for repeatable data-centric scientific work. Key programming concepts are introduced, and these concepts are then brought together in scientifically relevant applications to analyse data, interact with a database and create dynamic web content. Good coding practice, such as the importance of documentation and version control, is emphasised throughout.
 
