--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,44 +5,95 @@ permalink: /teaching/
 author_profile: true
 ---
 
-I have worked as Teaching Assistant for various modules with a focus on Machine Learning and Data Mining both for Queen Mary University of London and Imperial College London. 
-Main responsibilities consisted of preparing materials for the module,supervising students during laboratories, helping them with exercises and explaining the theory of the corresponding module.
-Below a list and a short description of the modules that I have assisted with.
+<p>
+I have supervised more than seven students at both master and doctoral levels and have served as a Teaching Assistant for several modules in 
+<strong>Machine Learning</strong>, <strong>Computer Vision</strong>, <strong>Programming</strong>, and <strong>Electronic Sensing</strong> 
+at Imperial College London and Queen Mary University of London.
+My responsibilities included preparing teaching material, leading laboratory sessions, supporting students with exercises, and explaining theoretical concepts.
+</p>
 
-<h2><a href="https://www.imperial.ac.uk/study/courses/postgraduate-taught/translational-neuroscience/">Machine Learning For Neuroscience (Postgraduate) - Imperial</a></h2>
-Machine learning module applied to neuroscience-inspired machine learning, main focus on Machine Learning and Deep Learning models.
-<a href="https://github.com/PBarnaghi/ML4NS">Material distributed on Github</a>
+<p>Below is a list of the modules I assisted, each with a short description.</p>
 
+<hr>
 
-<h2><a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs708pecs708u-machine-learning.html">Machine Learning (Postgraduate) - QMUL</a></h2>
-This module consisted on providing a understanding of machine learning methods, including pattern recognition, clustering and neural networks, 
-and to allow them to apply such methods in a range of areas.
+<h2>
+  <a href="https://www.imperial.ac.uk/study/courses/postgraduate-taught/translational-neuroscience/">
+    Machine Learning for Neuroscience (Postgraduate) – Imperial College London
+  </a>
+</h2>
+<p>
+A postgraduate module focusing on neuroscience-inspired applications of machine learning and deep learning. 
+I supported lectures and supervised practical sessions where students implemented key algorithms.
+<br>
+<a href="https://github.com/PBarnaghi/ML4NS">Material distributed on GitHub</a>
+</p>
 
+<hr>
 
-<h2><a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs607u-data-mining.html">Data Mining (Postgraduate) - QMUL</a></h2>
-This module combined practical exploration of data mining techniques with a exploration of algorithms, including their limitations. 
-		
+<h2>
+  <a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs708pecs708u-machine-learning.html">
+    Machine Learning (Postgraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+This module introduced core machine learning concepts including pattern recognition, clustering, regression, 
+and neural networks. My teaching focused on guiding students through lab exercises and theoretical foundations.
+</p>
 
-<h2><a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs717pecs717u-it-programming.html">Computer Programming (Postgraduate) - QMUL</a></h2>
-This module provided an introduction to the principles of programming in the context of designing and constructing complete programs. 
+<hr>
 
+<h2>
+  <a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs607u-data-mining.html">
+    Data Mining (Postgraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+A practice-oriented module covering data mining algorithms and their limitations. 
+I supported students with hands-on implementation and exploration of real-world datasets.
+</p>
 
-<h2><a href="https://www.sems.qmul.ac.uk/staff/i.farkhatdinov/teaching/">Electronic Sensing (Postgraduate) - QMUL</a></h2>
-This module focused on electronic engineering aspects of sensing and instrumentation system: signal theory, metrology, sensing & transduction, signal acquisition and conditioning 
-for further processing, analysis, characterisation and design of sensing electronic systems, system-level considerations and sensor data analysis techniques. 
+<hr>
 
+<h2>
+  <a href="http://eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs717pecs717u-it-programming.html">
+    Computer Programming (Postgraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+An introduction to programming principles and software design. Students learned to design and implement complete programs using structured approaches.
+</p>
 
-<!-- <h2>Object-Oriented Programming (Undergraduate)</h2>
-		Major topics include the concepts of class, object, method, subclass, inheritance and their use in programming. 
-		The relevance of the object oriented style with respect to concrete software problems will be stressed both in lectures and labs. 
-		There will be two hours of lectures per week, and each student will have a weekly timetabled lab session. 
-		In addition, you will be expected to spend further time outside scheduled lab periods in the lab (or at home machines if they are available), and to read textbooks and review notes. -->
+<hr>
 
+<h2>
+  <a href="https://www.sems.qmul.ac.uk/staff/i.farkhatdinov/teaching/">
+    Electronic Sensing (Postgraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+A module covering sensing and instrumentation systems: signal theory, metrology, transduction, acquisition, conditioning, 
+and system-level design. I assisted with exercises and supervised laboratory work on sensor data analysis.
+</p>
 
-<h2><a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs505u-software-engineering.html">Software Engineering (Undergraduate) - QMUL</a></h2>
-This module provided the management principles, theoretical foundations, tools, notation and background necessary to develop and test large-scale software systems. 
+<hr>
 
-<h2><a href="https://github.com/fsmeraldi/c4s-introduction">Coding for Scientists (Undergraduate) -  QMUL</a></h2>
-This module provided a hands-on introduction to computer programming, primarily using the popular Python scripting language. 
+<h2>
+  <a href="http://www.eecs.qmul.ac.uk/undergraduate/programmes/module-information/items/ecs505u-software-engineering.html">
+    Software Engineering (Undergraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+This module introduced the principles, tools, and methodologies required for developing and testing large-scale software systems.
+</p>
 
+<hr>
 
+<h2>
+  <a href="https://github.com/fsmeraldi/c4s-introduction">
+    Coding for Scientists (Undergraduate) – Queen Mary University of London
+  </a>
+</h2>
+<p>
+A practical introduction to programming for science students, primarily using Python. 
+Teaching focused on problem-solving, computational thinking, and scientific scripting.
+</p>
