--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <p>
-I have supervised more than seven students at both master and doctoral levels and have served as a Teaching Assistant for several modules in 
+I have supervised more than seven students at both master and doctoral levels and been a Teaching Assistant for several modules in 
 <strong>Machine Learning</strong>, <strong>Computer Vision</strong>, <strong>Programming</strong>, and <strong>Electronic Sensing</strong> 
 at Imperial College London and Queen Mary University of London.
 My responsibilities included preparing teaching material, leading laboratory sessions, supporting students with exercises, and explaining theoretical concepts.
